{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 9,
  "lineage": "25b02790-af02-6b39-9fbe-e05c92f81616",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_learn_private_ranges_enabled": false,
            "base_policy_id": "",
            "child_policies": [],
            "dns": [],
            "explicit_proxy": [],
            "firewalls": [],
            "id": "/subscriptions/687576b5-cfc7-4d84-a216-afe39d6e983e/resourceGroups/example-resources/providers/Microsoft.Network/firewallPolicies/example-fwpolicy",
            "identity": [],
            "insights": [],
            "intrusion_detection": [],
            "location": "westeurope",
            "name": "example-fwpolicy",
            "private_ip_ranges": null,
            "resource_group_name": "example-resources",
            "rule_collection_groups": [],
            "sku": "Standard",
            "sql_redirect_allowed": null,
            "tags": null,
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null,
            "tls_certificate": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [
              {
                "action": "Deny",
                "name": "app_rule_collection1",
                "priority": 500,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": null,
                    "destination_fqdn_tags": null,
                    "destination_fqdns": [
                      "*.microsoft.com"
                    ],
                    "destination_urls": null,
                    "name": "app_rule_collection1_rule1",
                    "protocols": [
                      {
                        "port": 80,
                        "type": "Http"
                      },
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.0.0.1"
                    ],
                    "source_ip_groups": null,
                    "terminate_tls": false,
                    "web_categories": null
                  }
                ]
              }
            ],
            "firewall_policy_id": "/subscriptions/687576b5-cfc7-4d84-a216-afe39d6e983e/resourceGroups/example-resources/providers/Microsoft.Network/firewallPolicies/example-fwpolicy",
            "id": "/subscriptions/687576b5-cfc7-4d84-a216-afe39d6e983e/resourceGroups/example-resources/providers/Microsoft.Network/firewallPolicies/example-fwpolicy/ruleCollectionGroups/example-fwpolicy-rcg",
            "name": "example-fwpolicy-rcg",
            "nat_rule_collection": [
              {
                "action": "Dnat",
                "name": "nat_rule_collection1",
                "priority": 300,
                "rule": [
                  {
                    "destination_address": "192.168.1.1",
                    "destination_ports": [
                      "80"
                    ],
                    "name": "nat_rule_collection1_rule1",
                    "protocols": [
                      "TCP",
                      "UDP"
                    ],
                    "source_addresses": [
                      "10.0.0.1",
                      "10.0.0.2"
                    ],
                    "source_ip_groups": null,
                    "translated_address": "192.168.0.1",
                    "translated_fqdn": "",
                    "translated_port": 8080
                  }
                ]
              }
            ],
            "network_rule_collection": [
              {
                "action": "Deny",
                "name": "network_rule_collection1",
                "priority": 400,
                "rule": [
                  {
                    "destination_addresses": [
                      "192.168.1.1",
                      "192.168.1.2"
                    ],
                    "destination_fqdns": null,
                    "destination_ip_groups": null,
                    "destination_ports": [
                      "80",
                      "1000-2000"
                    ],
                    "name": "network_rule_collection1_rule1",
                    "protocols": [
                      "TCP",
                      "UDP"
                    ],
                    "source_addresses": [
                      "10.0.0.1"
                    ],
                    "source_ip_groups": null
                  }
                ]
              }
            ],
            "priority": 500,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall_policy.example",
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/687576b5-cfc7-4d84-a216-afe39d6e983e/resourceGroups/example-resources/providers/Microsoft.Network/publicIPAddresses/testpip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.144.138.60",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "testpip",
            "resource_group_name": "example-resources",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/687576b5-cfc7-4d84-a216-afe39d6e983e/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/testvnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "example-resources",
            "virtual_network_name": "testvnet"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1375fc2b-4f8f-42bc-b63d-efb5f176a0fd",
            "id": "/subscriptions/687576b5-cfc7-4d84-a216-afe39d6e983e/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/testvnet",
            "location": "westeurope",
            "name": "testvnet",
            "resource_group_name": "example-resources",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/687576b5-cfc7-4d84-a216-afe39d6e983e/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/testvnet/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    }
  ]
}